# Language-to-Actions

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/agent_controller/: CMakeLists.txt  package.xml
src/agent_controller/include/agent_controller/: process_sensor.hpp  simple_controller.hpp
src/agent_controller/src/: process_sensor.cpp  process_sensor_node.cpp  simple_controller.cpp  simple_controller_node.cpp
src/agent_interfaces/: CMakeLists.txt  package.xml
src/agent_interfaces/msg/: SensorInterface.msg
src/articubot_one/description/: ros2_control.xacro
src/articubot_one/launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
src/conscience/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/conscience/conscience/: agent.py  graph_util.py
src/rabbit_one/description/: face.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
src/rabbit_one/launch/: launch_robot.launch.py  rsp.launch.py
util/container_scripts/: build_install.sh
ws/: README.md  dump.rdb  requirements.txt
ws/src/agent_controller/src/: process_sensor.cpp  simple_controller.cpp
ws/src/agent_interfaces/: CMakeLists.txt  package.xml
ws/src/agent_interfaces/msg/: ControllerInterface.msg  SensorInterface.msg
ws/src/agent_interfaces/srv/: GetSensorDistances.srv
ws/src/conscience/: package.xml  setup.py
ws/src/conscience/conscience/: agent.py  graph_util.py  image_server.py  state_store.py  streamlit_app.py
ws/src/rabbit_one/: CMakeLists.txt  package.xml
ws/src/rabbit_one/launch/: launch_sim.launch.py
(+6 files in other folders)
